# pyFityk

./: .gitignore  pyproject.toml
src/pyfityk/: __init__.py  __main__.py  cli.py  fit_Map.py  fityk.py  gui.py  io.py  mapping.py  mappings.py  support.py
tests/: fit_simple.fit  test_speed.py  testing.py
