[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name =  "pyFityk"
authors = [
    {name = "Riccardo Galafassi", email = "rigal@live.it"},
]
description = "Macros for fityk in python "
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rigal92/pyFityk.git"


[tool.setuptools.packages.find]
where = ["src"]


